# esp32

./: README.md
blufi/: sdkconfig  sdkconfig.old
blufi/main/: blufi_example_main.c
gatt_server_service_table/: CMakeLists.txt  partitions.csv  sdkconfig
gatt_server_service_table/main/: gatts_table_creat_demo.c  gatts_table_creat_demo.h
ota_mqtt/: CMakeLists.txt  sdkconfig  sdkconfig.old
ota_mqtt/main/: CMakeLists.txt  demo_config.h
ota_mqtt/main/certs/: aws_codesign.crt  client.crt  client.key
